--- a/.harness/GoPipeline.yaml
+++ b/.harness/GoPipeline.yaml
@@ -19,12 +19,13 @@ pipeline:
         spec:
           cloneCodebase: true
           infrastructure:
-            type: VM
+            type: KubernetesDirect
             spec:
-              type: Pool
-              spec:
-                poolName: Test
-                os: Linux
+              connectorRef: gke
+              namespace: harness
+              automountServiceAccountToken: true
+              nodeSelector: {}
+              os: Linux
           execution:
             steps:
               - step:
@@ -32,5 +33,7 @@ pipeline:
                   name: Run_1
                   identifier: Run_1
                   spec:
+                    connectorRef: Dockerhub
+                    image: ubuntu:latest
                     shell: Sh
                     command: echo "this is test to print"
